--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "declaration": true,
         "strict": true,
         "strictNullChecks": false,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "files": [
         "index.ts"
