:wrench: Update config file

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,6 +1,5 @@
 {
     "token": "",
-    "supportChannel": "",
-    "contactChannel": "",
-    "trialTickets": ""
+    "supportNotifChannel": "838042383542386708",
+    "supportYnotesChannel": "838042187575853126"
 }
